[project]
name = "pdfmalt"
version = "0.1.0"
description = "PDF parser and generator"
readme = "README.md"
authors = [{ name = "gauzesya", email = "gauzesya@gmail.com" }]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pyright>=1.1.390", "ruff>=0.8.2"]

[tool.ruff.lint]
extend-select = ["ANN"]
